--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
              
                     <ul class="nav navbar-nav">
                         <li class="nav-item"><a class="nav-link active smoothScroll" href="#feature" style="color: var(--text-color);">Features</a></li>
-                        <li class="nav-item"><a class="nav-link smoothScroll" href="#commands" style="color: var(--text-color);">Commands</a></li>
+                        <li class="nav-item"><a class="nav-link smoothScroll" href="commands.html" style="color: var(--text-color);">Commands</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://discord.com/oauth2/authorize?client_id=786105219757899777&permissions=141733784566&scope=bot%20applications.commands" style="color: var(--text-color);">Invite</a></li>
                         <li class="nav-item"><a class="nav-link smoothScroll" href="https://statcord.com/bot/786105219757899777" style="color: var(--text-color);">Statistics</a></li>
                     </ul>
