--- a/commands.html
+++ b/commands.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-	<title>Zinc | Discord bot</title>
+	<title>Zinc | Commands </title>
 	<meta name="description" content="Zinc is the only bot you need for your Discord server. It has all the categories which can benefit you in long run.">
-	<meta name="theme-color" content="#f54254">
+	<meta name="theme-color" content="#11101D">
 	<link rel="icon" type="image/png" sizes="300x250" href="img/zinc.png">
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One">
@@ -86,18 +86,7 @@
     </div>
 
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="var(--secondary)" fill-opacity="1" d="M0,160L48,154.7C96,149,192,139,288,154.7C384,171,480,213,576,218.7C672,224,768,192,864,181.3C960,171,1056,181,1152,192C1248,203,1344,213,1392,218.7L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-    <div class="footer-dark" style="background: var(--secondary);padding-top: 0px;padding-bottom: 0px;">
-        <div class="container">
-            <div class="row">
-                <div class="col item social"><a class="smoothScroll" href="#top"><i class="icon ion-android-arrow-up"></i></a></div>
-            </div>
-            <p class="copyright" style="color: var(--text-color);">Zinc © 2021</p>
-            <p class="copyright" style="color: var(--text-color);padding: 0px;">
-                Theme by&nbsp;<a style="color: var(--main-color);">Hiphop602</a></p>
-                
 
-        </div>
-    </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/Counting.js"></script>
