--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<title>Zinc | Discord bot</title>
 	<meta name="description" content="Zinc is the only bot you need for your Discord server. It has all the categories which can benefit you in long run.">
-	<meta name="theme-color" content="#f54254">
+	<meta name="theme-color" content="#11101D">
 	<link rel="icon" type="image/png" sizes="300x250" href="img/zinc.png">
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One">
@@ -24,7 +24,7 @@
 <!-- Body -->
 <body style="background-color: var(--background);">
         <nav class="navbar navbar-light navbar-expand fixed-top" style="color: var(--main-color);border-top-width: 0px;border-top-style: solid;background: var(--background); justify-content: space-around;">
-            <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--main-color); ">ZINC</a><button class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--main-color); ">Home</a><button class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
              
                     <ul class="nav navbar-nav">
                         <li class="nav-item"><a class="nav-link active smoothScroll" href="#feature" style="color: var(--text-color);">Features</a></li>
