--- a/commands.html
+++ b/commands.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<title>Zinc | Commands </title>
-	<meta name="description" content="Zinc is the only bot you need for your Discord server. It has all the categories which can benefit you in long run.">
+	<meta name="description" content="This page is for the list of commands Zinc has.">
 	<meta name="theme-color" content="#11101D">
 	<link rel="icon" type="image/png" sizes="300x250" href="img/zinc.png">
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
