--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<title>Zinc | Discord bot</title>
 	<meta name="description" content="Zinc is the only bot you need for your Discord server. It has all the categories which can benefit you in long run.">
 	<meta name="theme-color" content="#11101D">
+ 	<meta name="author" content="Zinc">
+ 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/png" sizes="300x250" href="img/zinc.png">
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One">
@@ -27,7 +29,7 @@
             <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--main-color); ">Home</a><button class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
              
                     <ul class="nav navbar-nav">
-                        <li class="nav-item"><a class="nav-link active smoothScroll" href="#feature" style="color: var(--text-color);">Features</a></li>
+                        <li class="nav-item"><a class="nav-link active smoothScroll" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" style="color: var(--text-color);">Features</a></li>
                         <li class="nav-item"><a class="nav-link smoothScroll" href="commands.html" style="color: var(--text-color);">Commands</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://discord.com/oauth2/authorize?client_id=786105219757899777&permissions=141733784566&scope=bot%20applications.commands" style="color: var(--text-color);">Invite</a></li>
                         <li class="nav-item"><a class="nav-link smoothScroll" href="https://statcord.com/bot/786105219757899777" style="color: var(--text-color);">Statistics</a></li>
