--- a/commands.html
+++ b/commands.html
@@ -19,7 +19,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/60ee72c8649e0a0a5ccc19e5/1fahn0oem';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 
 <!-- Body -->
 <body style="background-color: var(--background);">
