--- a/commands.html
+++ b/commands.html
@@ -36,10 +36,11 @@ s0.parentNode.insertBefore(s1,s0);
 <!-- Body -->
 <body style="background-color: var(--background);">
 	<nav class="navbar navbar-light navbar-expand fixed-top" style="color: var(--main-color);border-top-width: 0px;border-top-style: solid;background: var(--background); justify-content: space-around;">
-        <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--main-color); ">Home</a><button class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--main-color); ">Zinc</a><button class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <ul class="nav navbar-nav">
+		<li class="nav-item"><a class="nav-link smoothScroll" href="index.html" style="color: var(--text-color);">Home</a></li>
                 <li class="nav-item"><a class="nav-link active smoothScroll" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" style="color: var(--text-color);">Features</a></li>
-                <li class="nav-item"><a class="nav-link smoothScroll" href="commands.html" style="color: var(--text-color);">Commands</a></li>
+		<li class="nav-item"><a class="nav-link smoothScroll" href="commands.html" style="color: var(--text-color);">Commands</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://discord.com/oauth2/authorize?client_id=786105219757899777&permissions=141733784566&scope=bot%20applications.commands" style="color: var(--text-color);">Invite</a></li>
                 <li class="nav-item"><a class="nav-link smoothScroll" href="https://statcord.com/bot/786105219757899777" style="color: var(--text-color);">Statistics</a></li>
             </ul>
