--- a/stat.html
+++ b/stat.html
@@ -38,60 +38,17 @@ s0.parentNode.insertBefore(s1,s0);
 	<nav class="navbar navbar-light navbar-expand fixed-top" style="color: var(--main-color);border-top-width: 0px;border-top-style: solid;background: var(--background); justify-content: space-around;">
         <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--main-color); ">Zinc</a><button class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <ul class="nav navbar-nav">
-	            	<li class="nav-item"><a class="nav-link smoothScroll" href="index.html" style="color: var(--text-color);">Home</a></li>
+                <li class="nav-item"><a class="nav-link smoothScroll" href="index.html" style="color: var(--text-color);">Home</a></li>               
                 <li class="nav-item"><a class="nav-link active smoothScroll" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" style="color: var(--text-color);">Features</a></li>
-                <li class="nav-item"><a class="nav-link" href="https://discord.com/oauth2/authorize?client_id=786105219757899777&permissions=141733784566&scope=bot%20applications.commands" style="color: var(--text-color);">Invite</a></li>
-                <li class="nav-item"><a class="nav-link smoothScroll" href="stat.html" style="color: var(--text-color);">Statistics</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://discord.com/oauth2/authorize?client_id=786105219757899777&permissions=141733784566&scope=bot%20applications.commands" style="color: var(--text-color);">Invite</a></li> 
+                <li class="nav-item"><a class="nav-link smoothScroll" href="commands.html" style="color: var(--text-color);">Commands</a></li>
+               
+                
             </ul>
         </div>
     </nav>
 
-    <div class="container">
-  <h2>All Commands</h2>
-  <div class="accordion">
-
-    <!-- Copy code for more categories -->
-          <div class="accordion-item">
-      <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Moderation Commands</span><span class="icon" aria-hidden="true"></span></button>
-      <div class="accordion-content">
-        <p> Coming soon! <br> :) </p>
-      </div>
-    </div>
-    <!-- to here (amogus) -->
-          <div class="accordion-item">
-      <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Utility Commands</span><span class="icon" aria-hidden="true"></span></button>
-      <div class="accordion-content">
-        <p> Coming soon! <br> :) </p>
-      </div>
-    </div>
-          <div class="accordion-item">
-      <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Economy Commands </span></button>
-      <div class="accordion-content">
-        <p> Coming soon! <br> :) </p>
-      </div>
-    </div>
-          <div class="accordion-item">
-      <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Giveaway Commands</span><span class="icon" aria-hidden="true"></span></button>
-      <div class="accordion-content">
-        <p> Coming soon! <br> :) </p>
-      </div>
-    </div>
-          <div class="accordion-item">
-      <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Fun Commands</span><span class="icon" aria-hidden="true"></span></button>
-      <div class="accordion-content">
-        <p> Coming soon! <br> :) </p>
-      </div>
-    </div>
-          <div class="accordion-item">
-      <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Information Commands</span><span class="icon" aria-hidden="true"></span></button>
-      <div class="accordion-content">
-        <p> Coming soon! <br> :) </p>
-      </div>
-    </div>
-
-
-  </div>
-</div>
+	<iframe src="https://statcord.com/bot/786105219757899777" style="height: 950px;width: 1000px;" title="Commands"></iframe>
 
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="var(--secondary)" fill-opacity="1" d="M0,160L48,154.7C96,149,192,139,288,154.7C384,171,480,213,576,218.7C672,224,768,192,864,181.3C960,171,1056,181,1152,192C1248,203,1344,213,1392,218.7L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
 
