--- a/dashboard_test.html
+++ b/dashboard_test.html
@@ -7,6 +7,8 @@
     <title>Zinc | Dashboard Test</title>
 </head>
 <body>
-    
+    <form method="POST" action="https://Zinc.ghostreturned.repl.co/test.txt/None/None/Hello">
+        <input type="submit">
+    </form>
 </body>
 </html>
