--- a/dashboard_test.html
+++ b/dashboard_test.html
@@ -7,7 +7,8 @@
     <title>Zinc | Dashboard Test</title>
 </head>
 <body>
-    <form method="POST" action="https://Zinc.ghostreturned.repl.co/test.txt/None/None/Hello">
+    <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
+    <form method="POST" action="https://Zinc.ghostreturned.repl.co/blacklistedusers.json/1/55/78" target="dummyframe">
         <input type="submit">
     </form>
 </body>
