--- a/index.html
+++ b/index.html
@@ -2,76 +2,91 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-	<title>Zinc | Discord bot</title>
-	<meta name="description" content="Zinc is the only bot you need for your Discord server. It has all the categories which can benefit you in long run.">
-	<meta name="theme-color" content="#11101D">
- 	<meta name="author" content="Zinc">
- 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/png" sizes="300x250" href="img/zinc.png">
-	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One">
-	<link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-	<link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-	<link rel="stylesheet" href="assets/css/styles.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Zinc | Discord bot</title>
+    <meta name="description"
+        content="Zinc is the only bot you need for your Discord server. It has all the categories which can benefit you in long run.">
+    <meta name="theme-color" content="#11101D">
+    <meta name="author" content="Zinc">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="300x250" href="img/zinc.png">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/60ee72c8649e0a0a5ccc19e5/1fahn0oem';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+        var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = 'https://embed.tawk.to/60ee72c8649e0a0a5ccc19e5/1fahn0oem';
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
+    })();
 </script>
 <!--End of Tawk.to Script-->
 
 <!-- Body -->
+
 <body style="background-color: var(--background);">
-    <nav class="navbar navbar-light navbar-expand fixed-top" style="color: var(--main-color);border-top-width: 0px;border-top-style: solid;background: var(--background); justify-content: space-around;">
-        <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--main-color); ">Zinc</a><button class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <ul class="nav navbar-nav">
-                    <li class="nav-item"><a class="nav-link active smoothScroll" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" style="color: var(--text-color);">Features</a></li>
-                    <li class="nav-item"><a class="nav-link smoothScroll" href="commands.html" style="color: var(--text-color);">Commands</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://discord.com/oauth2/authorize?client_id=786105219757899777&permissions=141733784566&scope=bot%20applications.commands" style="color: var(--text-color);">Invite</a></li>
-                    <li class="nav-item"><a class="nav-link smoothScroll" href="stat.html" style="color: var(--text-color);">Statistics</a></li>
-                </ul>
+    <nav class="navbar navbar-light navbar-expand fixed-top"
+        style="color: var(--main-color);border-top-width: 0px;border-top-style: solid;background: var(--background); justify-content: space-around;">
+        <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--main-color); ">Zinc</a><button
+                class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span
+                    class="navbar-toggler-icon"></span></button>
+            <ul class="nav navbar-nav">
+                <li class="nav-item"><a class="nav-link active smoothScroll"
+                        href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+                        style="color: var(--text-color);">Features</a></li>
+                <li class="nav-item"><a class="nav-link smoothScroll" href="commands.html"
+                        style="color: var(--text-color);">Commands</a></li>
+                <li class="nav-item"><a class="nav-link"
+                        href="https://discord.com/oauth2/authorize?client_id=786105219757899777&permissions=141733784566&scope=bot%20applications.commands"
+                        style="color: var(--text-color);">Invite</a></li>
+                <li class="nav-item"><a class="nav-link smoothScroll" href="stat.html"
+                        style="color: var(--text-color);">Statistics</a></li>
+            </ul>
         </div>
     </nav>
 
-
-    <header class="d-xl-flex flex-column justify-content-xl-center align-items-xl-center" style="height: 418px;text-align: center;margin: 55px;"><img class="profile" src="https://cdn.discordapp.com/avatars/786105219757899777/1b00e585f867da43f31f712d1729c756.webp?size=1024" width="150" height="150" style="margin-top: 30px;">
+    <header class="d-xl-flex flex-column justify-content-xl-center align-items-xl-center"
+        style="height: 418px;text-align: center;margin: 55px;"><img class="profile"
+            src="https://cdn.discordapp.com/avatars/786105219757899777/1b00e585f867da43f31f712d1729c756.webp?size=1024"
+            width="150" height="150" style="margin-top: 30px;">
         <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">Zinc </h1>
-		<p style="color: var(--secondary-text-color);">Zinc is the only bot you need for your Discord server. It has all the categories which can benefit you in long run.</p>
-	
-	</header>
+        <p style="color: var(--secondary-text-color);">Zinc is the only bot you need for your Discord server. It has all
+            the categories which can benefit you in long run.</p>
+    </header>
 
-
-
-	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="var(--secondary)" fill-opacity="1" d="M0,160L48,154.7C96,149,192,139,288,154.7C384,171,480,213,576,218.7C672,224,768,192,864,181.3C960,171,1056,181,1152,192C1248,203,1344,213,1392,218.7L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-    	<div class="footer-dark" style="background: var(--secondary);padding-top: 0px;padding-bottom: 0px;">
-        	<div class="container">
-	            <div class="row">
-	                <div class="col item social"><a class="smoothScroll" href="#top"><i class="icon ion-android-arrow-up"></i></a></div>
-	            </div>
-	            <p class="copyright" style="color: var(--text-color);">Zinc © 2021</p>
-	            <p class="copyright" style="color: var(--text-color);padding: 0px;">
-	                Created by&nbsp;<a style="color: var(--main-color);">The Zinc Team</a></p>
-        	</div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="var(--secondary)" fill-opacity="1"
+            d="M0,160L48,154.7C96,149,192,139,288,154.7C384,171,480,213,576,218.7C672,224,768,192,864,181.3C960,171,1056,181,1152,192C1248,203,1344,213,1392,218.7L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+        </path>
+    </svg>
+    <div class="footer-dark" style="background: var(--secondary);padding-top: 0px;padding-bottom: 0px;">
+        <div class="container">
+            <div class="row">
+                <div class="col item social"><a class="smoothScroll" href="#top"><i
+                            class="icon ion-android-arrow-up"></i></a></div>
+            </div>
+            <p class="copyright" style="color: var(--text-color);">Zinc © 2021</p>
+            <p class="copyright" style="color: var(--text-color);padding: 0px;">Created by&nbsp;<a
+                    style="color: var(--main-color);">The Zinc Team</a></p>
         </div>
+    </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/Counting.js"></script>
     <script src="assets/js/untitled.js"></script>
-
 </body>
 </html>
