--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ s0.parentNode.insertBefore(s1,s0);
 	            </div>
 	            <p class="copyright" style="color: var(--text-color);">Zinc © 2021</p>
 	            <p class="copyright" style="color: var(--text-color);padding: 0px;">
-	                Theme by&nbsp;<a style="color: var(--main-color);">Hiphop602</a></p>
+	                Created by&nbsp;<a style="color: var(--main-color);">The Zinc Team</a></p>
         	</div>
         </div>
     <script src="assets/js/jquery.min.js"></script>
