Revamped dashboard transfer method

--- a/dashboard_test.html
+++ b/dashboard_test.html
@@ -10,7 +10,9 @@
 
 <body>
     <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
-    <form method="POST" action="https://Zinc.ghostreturned.repl.co/blacklistedusers.json/1/55/78" target="dummyframe">
+    <form method="POST" action="https://Zinc.ghostreturned.repl.co/bot_api" target="dummyframe">
+        <input type="hidden" value="test.txt" name="file_name">
+        <input type="hidden" value="hi!" name="value">
         <input type="submit">
     </form>
 </body>
