Added other fields

--- a/dashboard_test.html
+++ b/dashboard_test.html
@@ -11,8 +11,10 @@
 <body>
     <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
     <form method="POST" action="https://Zinc.ghostreturned.repl.co/bot_api" target="dummyframe">
-        <input type="hidden" value="test.txt" name="file_name">
-        <input type="hidden" value="hi!" name="value">
+        <input type="text" value="test.txt" name="file_name">
+        <input type="text" value="12345" name="guild_id">
+        <input type="text" value="9876" name="key">
+        <input type="text" value="hi!" name="value">
         <input type="submit">
     </form>
 </body>
