Changed navbar to before one

--- a/stat.html
+++ b/stat.html
@@ -52,8 +52,8 @@
                 <li class="nav-item"><a class="nav-link"
                         href="https://discord.com/oauth2/authorize?client_id=786105219757899777&permissions=141733784566&scope=bot%20applications.commands"
                         style="color: var(--text-color);">Invite</a></li>
-                <li class="nav-item"><a class="nav-link smoothScroll" href="stat.html"
-                    style="color: var(--text-color);">Statistics</a></li>
+                <!-- <li class="nav-item"><a class="nav-link smoothScroll" href="stat.html"
+                    style="color: var(--text-color);">Statistics</a></li> -->
             </ul>
         </div>
     </nav>
