--- a/commands.html
+++ b/commands.html
@@ -47,9 +47,9 @@
                 <li class="nav-item"><a class="nav-link active smoothScroll"
                         href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
                         style="color: var(--text-color);">Features</a></li>
-                <li class="nav-item"><a class="nav-link active smoothScroll"
+                <!-- <li class="nav-item"><a class="nav-link active smoothScroll"
                         href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-                        style="color: var(--text-color);">Commands</a></li>
+                        style="color: var(--text-color);">Commands</a></li> -->
                 <li class="nav-item"><a class="nav-link"
                         href="https://discord.com/oauth2/authorize?client_id=786105219757899777&permissions=141733784566&scope=bot%20applications.commands"
                         style="color: var(--text-color);">Invite</a></li>
