--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
 
     <header class="d-xl-flex flex-column justify-content-xl-center align-items-xl-center"
         style="height: 418px;text-align: center;margin: 55px;"><img class="profile"
-            src="https://cdn.discordapp.com/avatars/786105219757899777/1b00e585f867da43f31f712d1729c756.webp?size=1024"
+            src="img/zinc.png"
             width="150" height="150" style="margin-top: 30px;">
+            <!-- Old Link: https://cdn.discordapp.com/avatars/786105219757899777/1b00e585f867da43f31f712d1729c756.webp?size=1024 -->
         <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">Zinc </h1>
         <p style="color: var(--secondary-text-color);">Zinc is the only bot you need for your Discord server. It has all
             the categories which can benefit you in long run.</p>
