--- a/stat.html
+++ b/stat.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Zinc | Commands </title>
-    <meta name="description" content="This page is for the list of commands Zinc has.">
+    <title>Zinc | Statistics </title>
+    <meta name="description" content="This page is for the statistics of Zinc.">
     <meta name="theme-color" content="#11101D">
     <link rel="icon" type="image/png" sizes="300x250" href="img/zinc.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
