--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
             <p class="copyright" style="color: var(--text-color);">Zinc © 2021</p>
             <p class="copyright" style="color: var(--text-color);padding: 0px;">Created by&nbsp;<a
-                    style="color: var(--main-color);">The Zinc Team</a></p>
+                    style="color: var(--main-color);">Hiphop602</a></p>
         </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
