--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Zinc | Discord bot</title>
     <meta property="description"
         content="Zinc is the only bot you need for your Discord server. It has all the categories which can benefit you in long run.">
-    <meta property="image" content="img/zinc.png">
-    <meta property="title" content="Zinc | A Discord Multipurpose Bot">
+    <meta property="twitter:image" content="img/zinc.png">
     <meta property="theme-color" content="#11101D">
     <meta property="author" content="Zinc">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->  <!-- Repetition of meta tag -->
