Added more meta tags

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Zinc | Discord bot</title>
+    <meta properyt="og:title" content="Zinc | A Multipurpose Discord Bot">
+    <meta property="og:site_name" content="Zinc | Discord Bot">
     <meta property="og:description"
         content="Zinc is the only bot you need for your Discord server. It has all the categories which can benefit you in long run.">
-    <meta property="og:theme-color" content="#11101D">
+    <meta property="theme-color" content="#11101D">
     <meta property="og:author" content="Zinc">
     <meta property="og:image" content="img/zinc.png">
+    <meta name="twitter:card" content="summary_large_image">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->  <!-- Repetition of meta tag -->
     <link rel="icon" type="image/png" sizes="300x250" href="img/zinc.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -20,7 +23,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <!--Start of Tawk.to Script-->
