--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Zinc | Discord bot</title>
-    <meta property="og:description"
+    <meta property="description"
         content="Zinc is the only bot you need for your Discord server. It has all the categories which can benefit you in long run.">
     <meta property="theme-color" content="#11101D">
-    <meta property="og:author" content="Zinc">
+    <meta property="author" content="Zinc">
     <meta property="og:image" content="img/zinc.png">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->  <!-- Repetition of meta tag -->
     <link rel="icon" type="image/png" sizes="300x250" href="img/zinc.png">
