Added TOS to index

--- a/tos.html
+++ b/tos.html
@@ -19,7 +19,7 @@
 
 <body style="background-color: var(--background);">
     <nav class="navbar navbar-light navbar-expand fixed-top"
-        style="color: var(--main-color);border-top-width: 0px;border-top-style: solid;background: var(--background); justify-content: space-around;">
+        style="color: var(--main-color); border-top-width: 0px; border-top-style: solid; background: var(--background); justify-content: space-around;">
         <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--main-color); ">Zinc</a><button
                 class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span
                     class="navbar-toggler-icon"></span></button>
@@ -39,11 +39,21 @@
     </nav>
 
     <header class="d-xl-flex flex-column justify-content-xl-center align-items-xl-center"
-        style="height: 418px;text-align: center;margin: 55px;"><img class="profile" src="img/zinc.png" width="150"
+        style="height: 418px; text-align: center; margin: 55px;"><img class="profile" src="img/zinc.png" width="150"
             height="150" style="margin-top: 30px;">
         <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">Zinc - Terms of Service</h1>
         <p style="color: var(--secondary-text-color);">Add TOS here.</p>
     </header>
+
+    <div class="footer-dark" style="background: var(--secondary); padding-top: 0px; padding-bottom: 0px;">
+        <div class="container">
+            <div class="row">
+                <div class="col item social"><a class="smoothScroll" href="#top"><i
+                            class="icon ion-android-arrow-up"></i></a></div>
+            </div>
+            <p class="copyright" style="color: var(--text-color);">Zinc © 2021</p>
+        </div>
+    </div>
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
