--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <meta property="theme-color" content="#11101D">
     <meta property="author" content="Zinc">
     <meta property="og:image" content="img/zinc.png">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->  <!-- Repetition of meta tag -->
     <link rel="icon" type="image/png" sizes="300x250" href="img/zinc.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One">
@@ -40,7 +39,7 @@
 
 <body style="background-color: var(--background);">
     <nav class="navbar navbar-light navbar-expand fixed-top"
-        style="color: var(--main-color);border-top-width: 0px;border-top-style: solid;background: var(--background); justify-content: space-around;">
+        style="color: var(--main-color); border-top-width: 0px; border-top-style: solid; background: var(--background); justify-content: space-around;">
         <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--main-color); ">Zinc</a><button
                 class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span
                     class="navbar-toggler-icon"></span></button>
@@ -60,14 +59,15 @@
     </nav>
 
     <header class="d-xl-flex flex-column justify-content-xl-center align-items-xl-center"
-        style="height: 418px;text-align: center;margin: 55px;"><img class="profile"
-            src="img/zinc.png"
-            width="150" height="150" style="margin-top: 30px;">
-            <!-- Old Link: https://cdn.discordapp.com/avatars/786105219757899777/1b00e585f867da43f31f712d1729c756.webp?size=1024 -->
+        style="height: 418px;text-align: center;margin: 55px;"><img class="profile" src="img/zinc.png" width="150"
+            height="150" style="margin-top: 30px;">
+        <!-- Old Link: https://cdn.discordapp.com/avatars/786105219757899777/1b00e585f867da43f31f712d1729c756.webp?size=1024 -->
         <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">Zinc </h1>
         <p style="color: var(--secondary-text-color);">Zinc is the only bot you need for your Discord server. It has all
             the categories which can benefit you in long run.</p>
-        <iframe src="https://canary.discord.com/widget?id=787561885495066634&theme=dark" width="350" height="260" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        <iframe src="https://canary.discord.com/widget?id=787561885495066634&theme=dark" width="350" height="260"
+            allowtransparency="true" frameborder="0"
+            sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
     </header>
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -82,8 +82,10 @@
                             class="icon ion-android-arrow-up"></i></a></div>
             </div>
             <p class="copyright" style="color: var(--text-color);">Zinc © 2021</p>
-            <p class="copyright" style="color: var(--text-color);padding: 0px;">Created by&nbsp;<a
+            <p class="copyright" style="color: var(--text-color); padding: 0px;">Created by&nbsp;<a
                     style="color: var(--main-color);">Hiphop602</a></p>
+            <p class="copyright" style="color: var(--text-color); padding: 0px;">Check out the <a
+                    style="color: var(--main-color);" href="tos.html">Terms of Service</a> here</p>
         </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
